# kh_monorepo

./: README.md  git_init.sh  history.md  init.sh  pyproject.toml
m_softdev/src/m_softdev/: debug.py  m_iters.py
m_softdev/tests/: test_debug_var.py
m_utils/src/m_utils/: printing.py  working_dots.py
m_utils/tests/: test_printing.py
